GG-22986 Fixed web console logging.